--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "database": {
+    "connectionString": "Host=localhost;Port=5432;Database=MyFarm;User Id=postgres;Password=!23Haslo"
   }
+  
+  
 }
