--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Modules\Season" />
+    </ItemGroup>
+
 </Project>
