--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
@@ -26,6 +29,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
     "@types/yup": "^0.32.0",
