--- a/client-app/package.json
+++ b/client-app/package.json
@@ -27,12 +27,14 @@
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
+  
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
     "@types/yup": "^0.32.0",
+    "@types/react-calendar": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
